# country-emoji

./: README.md  pyproject.toml
.github/workflows/: pypi.yml  test.yml
country_emoji/: __init__.py
src/country_emoji/: data.py
tests/: test_all.py
