[project]
name = "country-emoji"
authors = [{ name = "Nik Sergievskii", email = "nnonexistent@gmail.com" }]
description = "Converts between country names, ISO 3166-1 codes and flag emojis."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
dynamic = ['version']


[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "mypy",
    "blue",
    "isort",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.urls]
"Homepage" = "https://github.com/Nnonexistent/country-emoji"
"Bug Tracker" = "https://github.com/Nnonexistent/country-emoji/issues"


[tool.hatch.build]
exclude = [
    ".gitignore",
    ".github",
    "*.code-workspace",
    ".python-version",
]

[tool.hatch.version]
path = "src/country_emoji/__init__.py"


[tool.isort]
profile = "black"
line_length = 119
src_paths = ['src']


[tool.blue]
line-length = 119


[tool.mypy]
check_untyped_defs = true
strict = true
